<resources>
    <string name="app_name">Movie Manager</string>
    <string name="register_movie_text">Register Movie</string>
    <string name="display_movies">Display Movies</string>
    <string name="favourites_text">Favourites</string>
    <string name="edit_movies_text">Edit Movies</string>
    <string name="search_text">Search</string>
    <string name="ratings_text">Ratings</string>
    <string name="movie_manager_header_text">Movie Manager</string>
    <string name="title_text">TITLE</string>
    <string name="register_movie_text2">REGISTER MOVIE</string>
    <string name="year_text">YEAR</string>
    <string name="director_text">DIRECTOR</string>
    <string name="actors_actresses_text">ACTORS/ACTRESSES</string>
    <string name="rating_text">RATING</string>
    <string name="review_text">REVIEW</string>
    <string name="save_btn_text">SAVE</string>
    <string name="add_to_favourites_btn_text2">Add To Favourites</string>
    <string name="display_movies_activity_text">Display Movies</string>
    <string name="favourites_save_btn_text">Save</string>
    <string name="favourites_option_text">FAVOURITES</string>
    <string name="edit_movie_header_text">EDIT MOVIES</string>
    <string name="title_hint_2">Title</string>
    <string name="year_hint_2">Year</string>
    <string name="favourite_status">Favourite Status</string>
    <string name="yes_status">Yes</string>
    <string name="no_status">No</string>
    <string name="director_hint_2">Director</string>
    <string name="actors_actress_hint2">Actors/Actress</string>
    <string name="review_hint2">Review</string>
    <string name="update_button_text">Update</string>
    <string name="ratings_hint_2">Ratings</string>
    <string name="search_ediText_hint">Enter Here</string>
    <string name="search_btn_text2">Lookup</string>
    <string name="search_menu_text">Search Menu</string>
    <string name="ratings_activity_page_text">Ratings</string>
    <string name="find_movie_in_imdb_btn_text">Find Movie In IMDB</string>
</resources>